--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,40 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.antlr-2.7.7.jar=lib/antlr-2.7.7.jar
+file.reference.aopalliance-1.0.jar=lib/aopalliance-1.0.jar
+file.reference.classmate-1.0.0.jar=lib/classmate-1.0.0.jar
+file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
+file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
+file.reference.hibernate-commons-annotations-4.0.5.Final.jar=lib/hibernate-commons-annotations-4.0.5.Final.jar
+file.reference.hibernate-core-4.3.6.Final.jar=lib/hibernate-core-4.3.6.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib/hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate-validator-5.1.3.Final.jar=lib/hibernate-validator-5.1.3.Final.jar
+file.reference.jandex-1.1.0.Final.jar=lib/jandex-1.1.0.Final.jar
+file.reference.javassist-3.18.1-GA.jar=lib/javassist-3.18.1-GA.jar
+file.reference.javax.servlet-api-3.1.0.jar=lib/javax.servlet-api-3.1.0.jar
+file.reference.javax.servlet.jsp-api-2.3.1.jar=lib/javax.servlet.jsp-api-2.3.1.jar
+file.reference.jboss-logging-3.1.3.GA.jar=lib/jboss-logging-3.1.3.GA.jar
+file.reference.jboss-logging-annotations-1.2.0.Beta1.jar=lib/jboss-logging-annotations-1.2.0.Beta1.jar
+file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=lib/jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+file.reference.joda-money-0.6.jar=lib/joda-money-0.6.jar
+file.reference.joda-time-2.3.jar=lib/joda-time-2.3.jar
+file.reference.jstl-1.2.jar=lib/jstl-1.2.jar
+file.reference.mysql-connector-java-5.1.31.jar=lib/mysql-connector-java-5.1.31.jar
+file.reference.spring-aop-4.0.6.RELEASE.jar=lib/spring-aop-4.0.6.RELEASE.jar
+file.reference.spring-beans-4.0.6.RELEASE.jar=lib/spring-beans-4.0.6.RELEASE.jar
+file.reference.spring-context-4.0.6.RELEASE.jar=lib/spring-context-4.0.6.RELEASE.jar
+file.reference.spring-core-4.0.6.RELEASE.jar=lib/spring-core-4.0.6.RELEASE.jar
+file.reference.spring-expression-4.0.6.RELEASE.jar=lib/spring-expression-4.0.6.RELEASE.jar
+file.reference.spring-jdbc-4.0.6.RELEASE.jar=lib/spring-jdbc-4.0.6.RELEASE.jar
+file.reference.spring-orm-4.0.6.RELEASE.jar=lib/spring-orm-4.0.6.RELEASE.jar
+file.reference.spring-tx-4.0.6.RELEASE.jar=lib/spring-tx-4.0.6.RELEASE.jar
+file.reference.spring-web-4.0.6.RELEASE.jar=lib/spring-web-4.0.6.RELEASE.jar
+file.reference.spring-webmvc-4.0.6.RELEASE.jar=lib/spring-webmvc-4.0.6.RELEASE.jar
+file.reference.usertype.core-3.0.0.CR1.jar=lib/usertype.core-3.0.0.CR1.jar
+file.reference.usertype.spi-3.0.0.CR1.jar=lib/usertype.spi-3.0.0.CR1.jar
+file.reference.validation-api-1.1.0.Final.jar=lib/validation-api-1.1.0.Final.jar
+file.reference.xml-apis-1.0.b2.jar=lib/xml-apis-1.0.b2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -36,7 +70,41 @@ j2ee.platform=1.7-web
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.aopalliance-1.0.jar}:\
+    ${file.reference.classmate-1.0.0.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-4.0.5.Final.jar}:\
+    ${file.reference.hibernate-core-4.3.6.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.hibernate-validator-5.1.3.Final.jar}:\
+    ${file.reference.jandex-1.1.0.Final.jar}:\
+    ${file.reference.javassist-3.18.1-GA.jar}:\
+    ${file.reference.javax.servlet-api-3.1.0.jar}:\
+    ${file.reference.javax.servlet.jsp-api-2.3.1.jar}:\
+    ${file.reference.jboss-logging-3.1.3.GA.jar}:\
+    ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
+    ${file.reference.joda-money-0.6.jar}:\
+    ${file.reference.joda-time-2.3.jar}:\
+    ${file.reference.jstl-1.2.jar}:\
+    ${file.reference.mysql-connector-java-5.1.31.jar}:\
+    ${file.reference.spring-aop-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-beans-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-context-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-core-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-expression-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-jdbc-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-orm-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-tx-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-web-4.0.6.RELEASE.jar}:\
+    ${file.reference.spring-webmvc-4.0.6.RELEASE.jar}:\
+    ${file.reference.usertype.core-3.0.0.CR1.jar}:\
+    ${file.reference.usertype.spi-3.0.0.CR1.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}:\
+    ${file.reference.xml-apis-1.0.b2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -63,7 +131,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
