--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,9 @@ excludes=
 file.reference.antlr-2.7.7.jar=lib/antlr-2.7.7.jar
 file.reference.aopalliance-1.0.jar=lib/aopalliance-1.0.jar
 file.reference.classmate-1.0.0.jar=lib/classmate-1.0.0.jar
+file.reference.commons-fileupload-1.3.3-javadoc.jar=lib\\commons-fileupload-1.3.3-javadoc.jar
+file.reference.commons-fileupload-1.3.3.jar=lib/commons-fileupload-1.3.3.jar
+file.reference.commons-io-2.5-javadoc.jar=lib/commons-io-2.5-javadoc.jar
 file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
 file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
 file.reference.hibernate-commons-annotations-4.0.5.Final.jar=lib/hibernate-commons-annotations-4.0.5.Final.jar
@@ -104,7 +107,10 @@ javac.classpath=\
     ${file.reference.usertype.core-3.0.0.CR1.jar}:\
     ${file.reference.usertype.spi-3.0.0.CR1.jar}:\
     ${file.reference.validation-api-1.1.0.Final.jar}:\
-    ${file.reference.xml-apis-1.0.b2.jar}
+    ${file.reference.xml-apis-1.0.b2.jar}:\
+    ${file.reference.commons-io-2.5-javadoc.jar}:\
+    ${file.reference.commons-fileupload-1.3.3.jar}:\
+    ${file.reference.commons-fileupload-1.3.3-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
