--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,8 @@ file.reference.hibernate-commons-annotations-4.0.5.Final.jar=lib/hibernate-commo
 file.reference.hibernate-core-4.3.6.Final.jar=lib/hibernate-core-4.3.6.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib/hibernate-jpa-2.1-api-1.0.0.Final.jar
 file.reference.hibernate-validator-5.1.3.Final.jar=lib/hibernate-validator-5.1.3.Final.jar
+file.reference.jackson-core-asl-1.7.4.jar=lib/jackson-core-asl-1.7.4.jar
+file.reference.jackson-mapper-asl-1.7.4.jar=lib/jackson-mapper-asl-1.7.4.jar
 file.reference.jandex-1.1.0.Final.jar=lib/jandex-1.1.0.Final.jar
 file.reference.javassist-3.18.1-GA.jar=lib/javassist-3.18.1-GA.jar
 file.reference.javax.servlet-api-3.1.0.jar=lib/javax.servlet-api-3.1.0.jar
@@ -110,7 +112,9 @@ javac.classpath=\
     ${file.reference.xml-apis-1.0.b2.jar}:\
     ${file.reference.commons-io-2.5-javadoc.jar}:\
     ${file.reference.commons-fileupload-1.3.3.jar}:\
-    ${file.reference.commons-fileupload-1.3.3-javadoc.jar}
+    ${file.reference.commons-fileupload-1.3.3-javadoc.jar}:\
+    ${file.reference.jackson-core-asl-1.7.4.jar}:\
+    ${file.reference.jackson-mapper-asl-1.7.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
