--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.commons-io-2.5-javadoc.jar=lib/commons-io-2.5-javadoc.jar
 file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
 file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
 file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
+file.reference.gson-2.3.1.jar=lib/gson-2.3.1.jar
 file.reference.hibernate-commons-annotations-4.0.5.Final.jar=lib/hibernate-commons-annotations-4.0.5.Final.jar
 file.reference.hibernate-core-4.3.6.Final.jar=lib/hibernate-core-4.3.6.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib/hibernate-jpa-2.1-api-1.0.0.Final.jar
@@ -116,7 +117,8 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.3.3-javadoc.jar}:\
     ${file.reference.jackson-core-asl-1.7.4.jar}:\
     ${file.reference.jackson-mapper-asl-1.7.4.jar}:\
-    ${file.reference.commons-io-2.5.jar}
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.gson-2.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
